# enchant

./: meson.build  meson_options.txt
src/: meson.build
src/aspell/: meson.build
src/hspell/: meson.build
src/ispell/: meson.build
src/myspell/: meson.build
src/uspell/: meson.build
src/voikko/: meson.build
src/zemberek/: meson.build
tests/: meson.build
unittests/: meson.build
unittests/enchant_providers/: meson.build
unittests/mock_provider/: meson.build
